--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         canvas {
             display: block;
             margin: 0 auto;
+            width: 400px;
         }
         
         body {
-            background-color: aqua;
+            background-image: url("bg.jpg");
         }
     </style>
 </head>
